k8s/manifests/tfstack-api-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "default"
  name: tfstack-api-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfstack-api-worker
  template:
    metadata:
      labels:
        app: tfstack-api-worker
    spec:
      containers:
        - name: tfstack-api-worker
          image: elmoenco/tfstack-api-worker:latest # We're not using image tag versions, only latest
          imagePullPolicy: Always
          volumeMounts:
            - name: aws-credentials
              mountPath: "/root/.aws" # will create a file called credentials
              readOnly: true
      volumes:
        - name: aws-credentials
          secret:
            secretName: aws-credentials
